# luna

./: .gitignore  AGENTS.md  CLAUDE.md  SOUL.md  TODO.md  deploy.bat  deploy.sh  dev.bat  dev.sh  docker-compose.yml  novita_model.json  package-lock.json
backend/: Dockerfile  README.md  gunicorn.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.bat  setup.sh
backend/app/: main.py
backend/app/config/: __init__.py  lora_configs.py
backend/app/core/: __init__.py  auth_cookies.py  config.py  database.py  dependencies.py  events.py  exceptions.py  redis_client.py
backend/app/middleware/: __init__.py  (+1 more)
backend/scripts/: migrate_credits.py
backend/tests/: conftest.py  test_admin.py  test_admin_credits.py  test_audit_service.py  test_auth.py  test_auth_me_balance.py  test_auth_p0_flows.py  test_billing.py  test_billing_subscriptions.py  test_billing_webhooks.py  test_character.py  test_character_agent_orchestrator.py  test_character_factory.py  test_character_factory_concurrent.py  test_character_review.py  test_character_service.py  test_character_templates.py  test_chat.py  test_chat_history.py  test_choice_matcher.py  test_content.py  test_credit_deduction_paths.py  test_credit_service.py  test_gateway.py  test_group_chat.py  test_integration.py  test_intent_detector.py  test_llm.py  test_lora_selector_service.py  test_main.py  test_media.py  test_media_provider_task_result.py  test_media_service.py  test_media_trigger.py  test_memory.py  test_models.py  test_notifications.py  test_novita_integration.py  test_ops.py  test_pipeline.py  (+19 more)
(+533 files in other folders)
