[project]
name = "roxy-backend"
version = "0.1.0"
description = "Roxy Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.1.0",
    "httpx>=0.28.0",
    "firebase-admin>=6.5.0",
    "stripe>=11.0.0",
    "redis>=5.0.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "boto3>=1.35.0",
    "pyjwt>=2.9.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "faker>=30.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start-backend = "app.main:run_server"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
